# switchbot-mqtt-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  fnox.toml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: mosquitto.conf
docker/mqtt-debug-web/: index.html
src/switchbot_mqtt_gateway/: main.py  settings.py
src/switchbot_mqtt_gateway/gateway/: __init__.py  ble.py  commands.py  inventory.py  publisher.py  service.py  state.py
src/switchbot_mqtt_gateway/home_assistant/: __init__.py  discovery.py
src/switchbot_mqtt_gateway/mqtt/: __init__.py  client.py
src/switchbot_mqtt_gateway/switchbot/: __init__.py  ble.py  commands.py  dispatcher.py  normalization.py  normalize.py  openapi.py  parsing.py
src/switchbot_mqtt_gateway/switchbot/capabilities/: __init__.py  base.py  button_press.py  color_temperature_light.py  dimmable_light.py  power_switch.py  sensors.py
src/switchbot_mqtt_gateway/switchbot/devices/: __init__.py  base.py  bot.py  ceiling_light.py  hub_2.py  meter_pro_co2.py  plug_mini_jp.py  registry.py  strip_light.py
src/switchbot_mqtt_gateway/utils/: __init__.py  logging.py  serialization.py  time.py
tests/: test_gateway.py
