[project]
name = "switchbot-mqtt-gateway"
version = "0.1.0"
description = "SwitchBot BLE to MQTT gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "bleak>=1.0.0",
    "paho-mqtt>=2.1.0",
    "pyswitchbot>=2.2.0,<3.0.0",
]

[project.scripts]
switchbot-mqtt-gateway = "switchbot_mqtt_gateway.main:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

